[gd_scene load_steps=29 format=3 uid="uid://kyi7t88opsbw"]

[ext_resource type="Script" path="res://player/Player1.gd" id="1_ycuwh"]
[ext_resource type="Texture2D" uid="uid://dkwhttpx5n8i3" path="res://Assets/down1.png" id="3_lksok"]
[ext_resource type="Texture2D" uid="uid://dljp8qx0jijed" path="res://Assets/down3.png" id="4_phu8a"]
[ext_resource type="Texture2D" uid="uid://baim1c171w23r" path="res://Assets/down2.png" id="5_efikq"]
[ext_resource type="Texture2D" uid="uid://ccxj7ilc3pbc7" path="res://Assets/down_box (2).png" id="6_hoeq8"]
[ext_resource type="Texture2D" uid="uid://dgclv2i2m2bv7" path="res://Assets/down_box.png" id="7_rpuu6"]
[ext_resource type="Texture2D" uid="uid://b18guv3bjhufs" path="res://Assets/downwalk2.png" id="8_fq0tl"]
[ext_resource type="Texture2D" uid="uid://fwj7oyrrb6ol" path="res://Assets/downwalk1.png" id="9_ryt3g"]
[ext_resource type="Texture2D" uid="uid://bfdy5xbob6kc8" path="res://Assets/Godot-3.png.png" id="10_npf11"]
[ext_resource type="Texture2D" uid="uid://cogu84djb24w5" path="res://Assets/Godot-2.png.png" id="11_d3fj2"]
[ext_resource type="Texture2D" uid="uid://b0orxrr7vi5wl" path="res://Assets/Godot-1.png.png" id="12_74vik"]
[ext_resource type="Texture2D" uid="uid://dmcl87wa6acvy" path="res://Assets/left_box (1).png" id="13_1srnp"]
[ext_resource type="Texture2D" uid="uid://dsldnw41xe5st" path="res://Assets/left_box (2).png" id="14_t1gwo"]
[ext_resource type="Texture2D" uid="uid://bocg3bvfi50fi" path="res://Assets/leftwalk1.png" id="15_w1tvb"]
[ext_resource type="Texture2D" uid="uid://blyi51fetkg0b" path="res://Assets/leftwalk2.png" id="16_26cdw"]
[ext_resource type="Texture2D" uid="uid://b6iq6q51rwp60" path="res://Assets/up3.png" id="17_s2u16"]
[ext_resource type="Texture2D" uid="uid://bfu8ircd2r58h" path="res://Assets/up2.png" id="18_p3e88"]
[ext_resource type="Texture2D" uid="uid://cfcpi8nooah7m" path="res://Assets/up1.png" id="19_rxpsl"]
[ext_resource type="Texture2D" uid="uid://52rhi3yjlcmv" path="res://Assets/upbox (1).png" id="20_r11s0"]
[ext_resource type="Texture2D" uid="uid://dl7xjmwokyl7q" path="res://Assets/upbox (2).png" id="21_q3r5r"]
[ext_resource type="Texture2D" uid="uid://cwa7bqstvy3a" path="res://Assets/upbox (3).png" id="22_t5umn"]
[ext_resource type="Texture2D" uid="uid://bsi6orr0nh0as" path="res://Assets/upbox (4).png" id="23_ocfp2"]
[ext_resource type="Texture2D" uid="uid://ce5adgtwvdp17" path="res://Assets/upbox (5).png" id="24_s54yj"]
[ext_resource type="Texture2D" uid="uid://cvtqnvyrm835b" path="res://Assets/upbox (6).png" id="25_5xpqi"]
[ext_resource type="Texture2D" uid="uid://dhp3v6pctl5bh" path="res://Assets/upwalk1.png" id="26_cm8ve"]
[ext_resource type="Texture2D" uid="uid://dtxs3idqny6sn" path="res://Assets/upwalk2.png" id="27_fj5wj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p7as1"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("3_lksok")
}, {
"duration": 0.5,
"texture": ExtResource("4_phu8a")
}, {
"duration": 0.5,
"texture": ExtResource("5_efikq")
}],
"loop": false,
"name": &"down_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hoeq8")
}, {
"duration": 1.0,
"texture": ExtResource("7_rpuu6")
}],
"loop": true,
"name": &"down_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fq0tl")
}, {
"duration": 1.0,
"texture": ExtResource("9_ryt3g")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("10_npf11")
}, {
"duration": 0.5,
"texture": ExtResource("11_d3fj2")
}, {
"duration": 0.5,
"texture": ExtResource("12_74vik")
}],
"loop": false,
"name": &"left_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_1srnp")
}, {
"duration": 1.0,
"texture": ExtResource("14_t1gwo")
}],
"loop": true,
"name": &"left_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_w1tvb")
}, {
"duration": 1.0,
"texture": ExtResource("16_26cdw")
}],
"loop": true,
"name": &"left_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("17_s2u16")
}, {
"duration": 0.5,
"texture": ExtResource("18_p3e88")
}, {
"duration": 0.5,
"texture": ExtResource("19_rxpsl")
}],
"loop": false,
"name": &"up_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_r11s0")
}, {
"duration": 1.0,
"texture": ExtResource("21_q3r5r")
}, {
"duration": 1.0,
"texture": ExtResource("22_t5umn")
}, {
"duration": 1.0,
"texture": ExtResource("23_ocfp2")
}, {
"duration": 1.0,
"texture": ExtResource("24_s54yj")
}, {
"duration": 1.0,
"texture": ExtResource("25_5xpqi")
}],
"loop": true,
"name": &"up_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_cm8ve")
}, {
"duration": 1.0,
"texture": ExtResource("27_fj5wj")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_it6jm"]
radius = 39.0
height = 142.0

[node name="Player1" type="CharacterBody2D"]
collision_mask = 3590
script = ExtResource("1_ycuwh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, 5)
sprite_frames = SubResource("SpriteFrames_p7as1")
animation = &"left_walk"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 172

[node name="SantaCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
scale = Vector2(1.24, 1.1936)
shape = SubResource("CapsuleShape2D_it6jm")

[node name="SantaCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(1, 0.960001)
shape = SubResource("CapsuleShape2D_it6jm")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
